Update Particle Modeler to use latest React-Lab with fixes for iOS 13. Also adjust simulation to account for the same issues on iOS 13 with transparency while running.

--- a/css/particle-modeler.less
+++ b/css/particle-modeler.less
@@ -252,6 +252,15 @@ td {
     background-color: lightsteelblue;
   }
 }
+.container-base-overlay{
+  width: 300px;
+  margin-top: -42px;
+  height: 15px;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: black;
+}
 
 @button-size: 50px;
 
